--- a/safeChat/package.json
+++ b/safeChat/package.json
@@ -16,6 +16,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-paper": "^2.15.2",
     "react-native-safe-area-view": "^0.13.1",
+    "react-native-user-avatar": "^1.0.4",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
     "react-navigation-material-bottom-tabs": "^1.0.0"
