--- a/safeChat/package.json
+++ b/safeChat/package.json
@@ -14,6 +14,7 @@
     "react-instantsearch-native": "^5.6.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
+    "react-native-gifted-chat": "^0.9.0",
     "react-native-paper": "^2.15.2",
     "react-native-safe-area-view": "^0.13.1",
     "react-native-user-avatar": "^1.0.4",
