--- a/safeChat/package.json
+++ b/safeChat/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@virgilsecurity/e3kit": "^0.4.1",
     "expo": "^32.0.0",
     "expo-cli": "^2.18.2",
     "firebase": "^6.0.2",
