--- a/safeChat/package.json
+++ b/safeChat/package.json
@@ -7,24 +7,98 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@tradle/react-native-http": "^2.0.1",
+    "browserify-zlib": "^0.1.4",
+    "buffer": "^4.9.1",
+    "dns.js": "^1.0.1",
+    "events": "^1.1.1",
     "expo": "^32.0.0",
     "expo-cli": "^2.18.2",
     "firebase": "^6.0.2",
+    "https-browserify": "0.0.1",
+    "process": "^0.11.10",
+    "punycode": "^1.4.1",
     "react": "16.5.0",
     "react-instantsearch-native": "^5.6.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-crypto": "^2.1.2",
     "react-native-elements": "^1.1.0",
     "react-native-gifted-chat": "^0.9.0",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-level-fs": "^3.0.1",
+    "react-native-os": "^1.2.2",
     "react-native-paper": "^2.15.2",
+    "react-native-randombytes": "^3.5.3",
+    "react-native-rsa-native": "^1.0.24",
     "react-native-safe-area-view": "^0.13.1",
+    "react-native-tcp": "^3.3.0",
+    "react-native-udp": "^2.6.0",
     "react-native-user-avatar": "^1.0.4",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
-    "react-navigation-material-bottom-tabs": "^1.0.0"
+    "react-navigation-material-bottom-tabs": "^1.0.0",
+    "readable-stream": "^1.0.33",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "timers-browserify": "^1.4.2",
+    "url": "^0.10.3",
+    "util": "^0.10.4"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "rn-nodeify": "github:tradle/rn-nodeify"
   },
-  "private": true
+  "private": true,
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  }
 }
