--- a/safeChat/package.json
+++ b/safeChat/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@virgilsecurity/e3kit": "^0.4.1",
+    "@virgilsecurity/key-storage-rn": "^0.1.3",
+    "buffer": "^5.2.1",
     "expo": "^32.0.0",
     "expo-cli": "^2.18.2",
     "firebase": "^6.0.2",
