--- a/safeChat/package.json
+++ b/safeChat/package.json
@@ -10,12 +10,17 @@
     "@tradle/react-native-http": "^2.0.1",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.1",
+    "constants": "0.0.2",
+    "crypto": "^1.0.1",
     "dns.js": "^1.0.1",
     "events": "^1.1.1",
     "expo": "^32.0.0",
     "expo-cli": "^2.18.2",
     "firebase": "^6.0.2",
     "https-browserify": "0.0.1",
+    "hybrid-crypto-js": "^0.1.7",
+    "node-forge": "^0.8.4",
+    "node-rsa": "^1.0.5",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
     "react": "16.5.0",
