--- a/safeChat/package.json
+++ b/safeChat/package.json
@@ -28,6 +28,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-crypto": "^2.1.2",
     "react-native-elements": "^1.1.0",
+    "react-native-fs": "^2.13.3",
     "react-native-gifted-chat": "^0.9.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-level-fs": "^3.0.1",
